[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
tokio = { version =  "1.18.5", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
fern = "0.6.2"
chrono = "0.4.35"
